--- a/portfolio/js/counter/index.html
+++ b/portfolio/js/counter/index.html
@@ -77,7 +77,7 @@
 <body>
     <!-- Navigation Menu -->
     <nav class="container-menu menu-desktop menu-sticky">
-        <a href="../../../index.html"><img src="../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
+        <a href="../../../index.html"><img src="../../assets/img/ttrace_logo_clean_250x60.png" alt="website logo"></a>
         <ul>
             <li><a href="../../../index.html">Home</a></li>
             <li><a href="../../../portfolio/index.html">Portfolio</a></li>
